--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,15 @@
         }
     ],
     "minimum-stability": "alpha",
-    "require": {},
+    "require": {
+        "php": ">=5.4.0"
+    },
     "require-dev": {
         "symfony/var-dumper": "3.0.*@dev"
+    },
+    "autoload": {
+        "psr-0": {
+            "Ohkae": "src/"
+        }
     }
 }
