added verbage file, added descriptions and titles to reports, new tests added, cleaned up inheritance issues, removed useless class files

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "accell/ohkae",
     "description": "An accessibility validater for HTML",
+    "version": "1.0.0-alpha1",
     "license": "MIT",
     "authors": [
         {
